<resources>
    <string name="app_name">Calculator</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="bracket">()</string>
    <string name="equal">=</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="op0">+</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="_6">6</string>
    <string name="op1">-</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="divide">/</string>
    <string name="ac">AC</string>
    <string name="mul">*</string>
    <string name="per">%</string>
    <string name="rad">RAD</string>
    <string name="inv">INV</string>
    <string name="pi">PI</string>
    <string name="e">e</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="fact">!</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="square">^</string>
    <string name="root">√</string>
    <string name="divideUp">÷</string>
    <string name="mulUp">×</string>
    <string name="solution">Solution</string>
    <string name="todo">TODO</string>
    <string name="result">Result</string>
    <string name="calculator">Calculator</string>
    <string name="cal">Calculator</string>
    <string name="todo1">TODO</string>
    <string name="result1">Result</string>
    <string name="calculator_text">Calculator</string>
    <string name="todo5">TODO</string>
</resources>