<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/calculator_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <LinearLayout
        android:id="@+id/masterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"

        android:background="@color/dark_accent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allClear"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/cancelimage"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/operator4"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:width="@dimen/_80sdp"
                android:text="@string/per"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/operator3"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:text="@string/divideUp"


                android:textColor="@color/yellow"

                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:textColor="@color/white"
                android:text="@string/button7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:background="@color/white"
                android:text="@string/button8"
                android:textColor="#FAFCFD"

                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:textColor="@color/white"

                android:background="@drawable/ripple_effect"
                android:text="@string/button9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/operator2"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"


                android:text="@string/mulUp"
                android:textColor="@color/yellow"

                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:text="@string/button4"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="36dp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:width="@dimen/_80sdp"

                android:text="@string/button5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:text="@string/_6"


                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/operator1"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"

                android:text="@string/op1"
                android:textColor="@color/yellow"

                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"

                android:width="@dimen/_80sdp"
                android:text="@string/button1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:width="@dimen/_80sdp"
                android:text="@string/button2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:width="@dimen/_80sdp"
                android:text="@string/button3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/operator0"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"

                android:text="@string/op0"
                android:textColor="@color/yellow"

                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dot"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"


                android:text="@string/dot"
                android:textColor="#F7F9FA"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bracket"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:width="@dimen/_80sdp"


                android:text="@string/bracket"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/equal"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="@dimen/_80sdp"

                android:background="@drawable/custombutton"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_8sdp"

        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/masterLayout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/Solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"

        android:textColor="@color/white"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/resultTv"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>